# fwupd-gui

./: README.md  RELEASE  meson.build  meson_options.txt
contrib/: gnome-firmware.spec.in
data/: .meson.build.swp  firmware-update.desktop.in  meson.build  org.gnome.Firmware.desktop.in
data/appdata/: firmware-update.metainfo.xml  firmware-update.metainfo.xml.in  meson.build  org.gnome.Firmware.metainfo.xml  org.gnome.Firmware.metainfo.xml.in
data/icons/: meson.build
debian/: changelog  control  files
po/: LINGUAS  POTFILES.in  hr.po  tr.po
snap/: snapcraft.yaml
src/: firmware-update.gresource.xml  gfu-common.c  gfu-common.h  gfu-device-row.c  gfu-device-row.h  gfu-device-row.ui  gfu-main.c  gfu-main.ui  gfu-release-row.c  gfu-release-row.h  gfu-release-row.ui  meson.build
