install_data('org.gnome.Firmware.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('org.gnome.Firmware.Devel.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('org.gnome.Firmware-symbolic.svg',
             install_dir : 'share/icons/hicolor/symbolic/apps')
