install_data('firmware-update.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('firmware-update-dev.svg',
             install_dir : 'share/icons/hicolor/scalable/apps')
install_data('firmware-update-symbolic.svg',
             install_dir : 'share/icons/hicolor/symbolic/apps')
